--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>lethal company overtime bonus calculator</p>
+<!DOCTYPE html>
+<html>
+  <head></head>
+  <body>
+    <h1>lethal company overtime bonus calculator</h1>
+    <label for="sold">sold</label>
+    <input id="sold" min="0" name="sold" type="number">
+    <label for="quota">quota</label>
+    <input id="quota" min="0" name="quota" type="number">
+    <button name="calculate" type="">calculate</button>
+    <p id="bonus">overtime bonus</p>
+  </body>
+</html>
