added type to calculate button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <input id="sold" min="0" name="sold" type="number">
     <label for="quota">quota</label>
     <input id="quota" min="0" name="quota" type="number">
-    <button name="calculate" onclick="otBonus()" type="">calculate</button>
+    <button name="calculate" onclick="otBonus()" type="button">calculate</button>
     <p id="bonus">overtime bonus</p>
   </body>
 </html>
