added input for deadline

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <input id="sold" min="0" name="sold" type="number">
     <label for="quota">quota</label>
     <input id="quota" min="0" name="quota" type="number">
+    <label for="deadline">days until deadline</label>
+    <input id="deadline" max="3" min="0" name="deadline" type="number">
     <button name="calculate" onclick="otBonus()" type="button">calculate</button>
     <p id="bonus">overtime bonus</p>
   </body>
