--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <input id="overtime-deadline" max="3" min="0" name="overtime-deadline" type="number">
         </div>
         <button name="overtime-calculate" onclick="otBonus()" type="button">calculate</button>
-        <p id="bonus">overtime bonus</p>
+        <p id="overtime-bonus">overtime bonus</p>
       </div>
       <div id="calc-desired-paycheck-container">
         <h2>how much should I sell?</h2>
@@ -40,7 +40,7 @@
           <input id="desired-paycheck-deadline" max="3" min="0" name="desired-paycheck-deadline" type="number">
         </div>
         <button name="desired-paycheck-calculate" onclick="" type="button">calculate</button>
-        <p id="bonus">sell</p>
+        <p id="desired-paycheck-sell">sell</p>
       </div>
     </div>
   </body>
