added onclick to desired paycheck button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <label for="desired-paycheck-deadline">days until deadline</label>
           <input id="desired-paycheck-deadline" max="3" min="0" name="desired-paycheck-deadline" type="number">
         </div>
-        <button name="desired-paycheck-calculate" onclick="" type="button">calculate</button>
+        <button name="desired-paycheck-calculate" onclick="desiredPaycheck()" type="button">calculate</button>
         <p id="desired-paycheck-sell">sell</p>
       </div>
     </div>
