added meta and title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
-    <script type="text/javascript" src="bonusCalculator.js"></script>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="calculate overtime bonus and desired paycheck for the game lethal company" />
+    <meta name="keywords" content="lethal company, lethal company overtime,lethal company bonus,lethal company scrap value,lethal company paycheck">
+    <script type="text/javascript" src="bonusCalculator.js" defer></script>
     <style>
       .input-fields-container {
         display: grid;
@@ -10,6 +15,7 @@
         max-width: 75%;
       }
     </style>
+    <title>lc bonus calculator</title>
   </head>
   <body>
     <h1>lethal company overtime bonus calculator</h1>
