--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <meta name="keywords" content="lethal company, lethal company overtime,lethal company bonus,lethal company scrap value,lethal company paycheck">
     <script type="text/javascript" src="bonusCalculator.js" defer></script>
     <style>
+      .calculator-container {
+        display: flex;
+        justify-content: space-around;
+        max-width: 100%;
+      }
+      .calculator-container > div {
+        max-width: 40%;
+      }
       .input-fields-container {
         display: grid;
         gap: 10px;
@@ -19,7 +27,7 @@
   </head>
   <body>
     <h1>lethal company overtime bonus calculator</h1>
-    <div style="display: flex; justify-content: space-around; max-width: 100%;">
+    <div class="calculator-container">
       <div id="calc-overtime-container">
         <h2>what's the overtime bonus?</h2>
         <p>calculate overtime bonus given how much was sold and quota</p>
