added id to radio buttons

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         <p>calculate how much to sell given desired overtime bonus or paycheck (including overtime bonus) and quota</p>
         <div class="input-fields-container">
           <div>
-            <input type="radio" name="desired-value" value="desired-paycheck">
+            <input id="desired-value-paycheck" name="desired-value" type="radio" value="desired-paycheck">
             <label for="desired-paycheck">desired paycheck</label>
           </div>
           <input id="desired-paycheck" min="0" name="desired-paycheck" type="number" value="1932">
           <div>
-            <input type="radio" name="desired-value" value="desired-paycheck">
+            <input id="desired-value-overtime-bonus" name="desired-value" type="radio" value="desired-overtime-bonus">
             <label for="desired-overtime-bonus">desired overtime bonus</label>
           </div>
           <input id="desired-overtime-bonus" min="0" name="desired-overtime-bonus" type="number" value="19">
