made overtime input field disabled by default

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <input id="desired-value-overtime-bonus" name="desired-value" type="radio" value="desired-overtime-bonus">
             <label for="desired-value-overtime-bonus">desired overtime bonus</label>
           </div>
-          <input id="desired-overtime-bonus" min="0" name="desired-overtime-bonus" type="number" value="19">
+          <input disabled id="desired-overtime-bonus" min="0" name="desired-overtime-bonus" type="number" value="19">
           <label for="desired-paycheck-quota">quota</label>
           <input id="desired-paycheck-quota" min="0" name="desired-paycheck-quota" type="number" value="1739">
           <label for="desired-paycheck-deadline">days until deadline</label>
