--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <meta name="keywords" content="lethal company, lethal company overtime,lethal company bonus,lethal company scrap value,lethal company paycheck">
     <script type="text/javascript" src="bonusCalculator.js" defer></script>
     <style>
+      @font-face {
+        font-family: "3270font";
+        src: url("3270_fonts_d916271/3270-Regular.otf");
+        font-style: normal;
+        font-weight: normal;
+      }
       * {
-        font-family: sans-serif, serif;
+        font-family: "3270font", sans-serif, serif;
       }
       .calculator-container {
         display: flex;
