--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="description"
       content="calculate overtime bonus and desired paycheck for the game lethal company" />
     <meta name="keywords" content="lethal company, lethal company overtime,lethal company bonus,lethal company scrap value,lethal company paycheck">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script type="text/javascript" src="bonusCalculator.js" defer></script>
     <style>
       @font-face {
@@ -38,6 +39,7 @@
         max-width: 100%;
       }
       .calculator-container > div {
+        margin-top: 2em;
         width: 40%;
       }
       .input-fields-container {
