--- a/index.html
+++ b/index.html
@@ -102,5 +102,8 @@
       </div>
     </div>
     <p style="margin-top: 3em;">equation from <a href="https://lethal.miraheze.org/wiki/Quota#Overtime_Bonus">lethal company wiki</a></p>
+    <a href="https://github.com/ru1nw/lc-bonus-calculator">
+      <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" width="60px">
+    </a>
   </body>
 </html>
