added google-site-verification meta

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta
       name="description"
       content="calculate overtime bonus and desired paycheck for the game lethal company" />
+    <meta name="google-site-verification" content="nB76E4h7zII1jVupH8jxH5BD-9ZNkOl0CatmiPdwrus" />
     <meta name="keywords" content="lethal company, lethal company overtime,lethal company bonus,lethal company scrap value,lethal company paycheck">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script type="text/javascript" src="bonusCalculator.js" defer></script>
