fixed hazard suit not added as an item

--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
               <button class="item-count-button item-count-button-minus">-</button>
               <input class="item-count" max="1" min="0" type="number" value="0" />
               <button class="item-count-button item-count-button-plus">+</button>
+              <span class="item-name">Hazard suit</span><br>
+              <button class="item-count-button item-count-button-minus">-</button>
+              <input class="item-count" max="1" min="0" type="number" value="0" />
+              <button class="item-count-button item-count-button-plus">+</button>
               <span class="item-name">Pajama suit</span><br>
               <button class="item-count-button item-count-button-minus">-</button>
               <input class="item-count" max="1" min="0" type="number" value="0" />
