added function to select paid moons

--- a/index.html
+++ b/index.html
@@ -212,6 +212,29 @@
               <button class="item-count-button item-count-button-plus">+</button>
               <span class="item-name">Disco ball</span>
             </fieldset>
+            <fieldset>
+              <legend>paid moons</legend>
+              <button class="item-count-button item-count-button-minus">-</button>
+              <input class="item-count" max="1" min="0" type="number" value="0" />
+              <button class="item-count-button item-count-button-plus">+</button>
+              <span class="item-name">85-Rend</span><br>
+              <button class="item-count-button item-count-button-minus">-</button>
+              <input class="item-count" max="1" min="0" type="number" value="0" />
+              <button class="item-count-button item-count-button-plus">+</button>
+              <span class="item-name">7-Dine</span><br>
+              <button class="item-count-button item-count-button-minus">-</button>
+              <input class="item-count" max="1" min="0" type="number" value="0" />
+              <button class="item-count-button item-count-button-plus">+</button>
+              <span class="item-name">8-Titan</span><br>
+              <button class="item-count-button item-count-button-minus">-</button>
+              <input class="item-count" max="1" min="0" type="number" value="0" />
+              <button class="item-count-button item-count-button-plus">+</button>
+              <span class="item-name">68-Artifice</span><br>
+              <button class="item-count-button item-count-button-minus">-</button>
+              <input class="item-count" max="1" min="0" type="number" value="0" />
+              <button class="item-count-button item-count-button-plus">+</button>
+              <span class="item-name">5-Embrion</span>
+            </fieldset>
           </div>
           <label for="desired-paycheck-quota">quota</label>
           <input id="desired-paycheck-quota" min="0" name="desired-paycheck-quota" type="number" value="1739">
