updated to v64 store
fixed weed killer price, fixed cruiser price, and added belt bag. made github link open in new tab

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
@@ -109,6 +109,10 @@
               <input class="item-count" max="9999" min="0" type="number" value="0" />
               <button class="item-count-button item-count-button-plus">+</button>
               <span class="item-name">Weed killer</span><br>
+              <button class="item-count-button item-count-button-minus">-</button>
+              <input class="item-count" max="9999" min="0" type="number" value="0" />
+              <button class="item-count-button item-count-button-plus">+</button>
+              <span class="item-name">Belt bag</span><br>
               <button class="item-count-button item-count-button-minus">-</button>
               <input class="item-count" max="9999" min="0" type="number" value="0" />
               <button class="item-count-button item-count-button-plus">+</button>
@@ -246,7 +250,7 @@
       </div>
     </div>
     <p style="margin-top: 3em;">equation from <a href="https://lethal.miraheze.org/wiki/Quota#Overtime_Bonus">lethal company wiki</a></p>
-    <a href="https://github.com/ru1nw/lc-bonus-calculator">
+    <a href="https://github.com/ru1nw/lc-bonus-calculator" target="_blank">
       <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" width="60px">
     </a>
   </body>
